# DRIXL

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  benchmarks.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  tests.yml
drixl/: __init__.py  cli.py  context_store.py  converter.py  exceptions.py  message.py  structured.py  verbs.py
examples/: basic_pipeline.py  network_monitor.py
tests/: test_cli.py  test_context_store.py  test_context_ttl.py  test_message.py  test_message_enhancements.py  test_structured.py  test_verbs.py
